--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "9.1.0",
+    "npm-run-all": "4.1.5",
     "postcss": "^8",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.1",
