--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "canvas": "2.11.2",
+    "konva": "9.3.13",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-konva": "18.2.10",
+    "react-player": "2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
