--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "simple-git-hooks": {
     "pre-commit": "npm run pre-commit",
     "pre-push": "npm run pre-push"
+  },
+  "volta": {
+    "node": "20.0.0"
   }
 }
