--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "antd": "5.19.1",
     "canvas": "2.11.2",
     "konva": "9.3.13",
     "next": "14.2.5",
