--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "pre-push": "git diff --quiet --exit-code"
   },
   "dependencies": {
+    "@nextui-org/react": "2.4.6",
+    "framer-motion": "11.3.18",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
