--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint:eslint": "next lint",
     "lint:eslint:fix": "npm run lint:eslint -- --fix",
     "typecheck": "tsc --noEmit",
-    "lint": "npm-run-all lint:eslint typecheck",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'",
-    "pre-commit": "npx lint-staged --allow-empty",
-    "pre-push": "git diff --quiet --exit-code"
+    "check": "npx @biomejs/biome check --write src/"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -20,6 +17,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -27,13 +25,8 @@
     "lint-staged": "15.2.7",
     "npm-run-all": "4.1.5",
     "postcss": "^8",
-    "simple-git-hooks": "2.11.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "npm run pre-commit",
-    "pre-push": "npm run pre-push"
   },
   "volta": {
     "node": "20.0.0"
