--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@nextui-org/react": "2.4.6",
     "framer-motion": "11.3.18",
+    "konva": "9.3.14",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-konva": "18.2.10"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
