--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-konva": "18.2.10",
-    "react-player": "2.16.0"
+    "react-player": "2.16.0",
+    "react-split": "2.0.14"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
