--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,6 @@
 # supabase
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_URL=http://127.0.0.1:54321
+
+# prisma
+DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:54322/postgres"
