--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "2.4.6",
     "@prisma/client": "5.17.0",
+    "@supabase/supabase-js": "2.44.4",
     "framer-motion": "11.3.18",
     "konva": "9.3.14",
     "next": "14.2.5",
