--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,10 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: ["config.yaml"]
+    types:
+      - completed
 
 jobs:
   preview:
