--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -48,3 +48,7 @@ jobs:
 
       - name: Run build command
         run: npm run build
+
+  deploy:
+    needs: [build]
+    uses: ./.github/workflows/deploy.yaml
