--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy-prod:
+  deploy-vercel:
     uses: ./.github/workflows/deploy.yaml
     secrets:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
