--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,21 +62,26 @@ jobs:
       - run: supabase db lint
       - run: supabase test db
 
-      - name: Verify generated types are checked in
-        run: |
-          supabase gen types typescript --local > src/types/supabase.gen.ts
-          if ! git diff --ignore-space-at-eol --exit-code --quiet src/types/supabase.gen.ts; then
-            echo "Detected uncommitted changes after build. See status below:"
-            git diff
-            exit 1
-          fi
+      #TODO: 今は使わない
+      # - name: Verify generated types are checked in
+      #   run: |
+      #     supabase gen types typescript --local > src/types/supabase.gen.ts
+      #     if ! git diff --ignore-space-at-eol --exit-code --quiet src/types/supabase.gen.ts; then
+      #       echo "Detected uncommitted changes after build. See status below:"
+      #       git diff
+      #       exit 1
+      #     fi
 
   dryrun:
     runs-on: ubuntu-latest
+    environment:
+      name:  preview #TODO: 本番環境を作成したら書き換える
+      # name:  ${{ github.base_ref == 'main' && 'production' || 'preview' }}
+      url: ${{ steps.deploy.outputs.url }}
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      SUPABASE_DB_PASSWORD: ${{ github.base_ref == 'main' && secrets.PRODUCTION_DB_PASSWORD || secrets.STAGING_DB_PASSWORD }}
-      SUPABASE_PROJECT_ID: ${{ github.base_ref == 'main' && secrets.PRODUCTION_PROJECT_ID || secrets.STAGING_PROJECT_ID }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
 
     steps:
       - uses: actions/checkout@v4
@@ -84,10 +89,10 @@ jobs:
         with:
           version: latest
 
-      - run: supabase link --project-ref $SUPABASE_PROJECT_ID
+      - run: supabase link --project-ref ${{ env.SUPABASE_PROJECT_ID }}
       - run: supabase db push --dry-run
 
-  deploy-preview:
+  deploy-vercel:
     needs: [build]
     uses: ./.github/workflows/deploy.yaml
     secrets:
