--- a/.github/workflows/deploy-develop.yaml
+++ b/.github/workflows/deploy-develop.yaml
@@ -50,6 +50,8 @@ jobs:
 
   deploy-vercel:
     uses: ./.github/workflows/deploy.yaml
+    with:
+      deploy_environment: 'preview'
     secrets:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       VERCEL_ORG_ID: ${{ secrets.ORG_ID }}
