Vercel / Supabase へデプロイするフローを整備 (#16)
close #xxx

## やったこと
- vercelへデプロイするフローの整備
- supabaseへマイグレーションするフローの整備
## 変更内容
- Vercelのprojectの作成
- mainにマージされた場合にdev環境にデプロイ
- supabase のマイグレーション

するci/cd ワークフローを作成

## レビュワー観点
とりあえず、mainにマージされたらdev環境にデプロイするようにしてます。
本番環境の運用は後で考える。

<!-- 通常のレビューの観点とは別に、特別期待することがあれば記載 -->

## その他・参考リンクなど

--- a/.github/workflows/ci-node.yaml
+++ b/.github/workflows/ci-node.yaml
@@ -1,6 +1,13 @@
-name: Node.js build workflow
+name: CI workflow (npm)
 
-on: [push]
+on:
+  push:
+    paths:
+      - "public/**"
+      - "src/**"
+      - "package.json"
+      - "package-lock.json"
+      - ".github/workflows/**"
 
 jobs:
   build:
@@ -48,3 +55,13 @@ jobs:
 
       - name: Run build command
         run: npm run build
+
+  deploy-vercel:
+    needs: [build]
+    uses: ./.github/workflows/deploy.yaml
+    with:
+      deploy_environment: 'preview'
+    secrets:
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+      VERCEL_ORG_ID: ${{ secrets.ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.PROJECT_ID }}
