--- a/.github/workflows/deploy-develop.yaml
+++ b/.github/workflows/deploy-develop.yaml
@@ -27,26 +27,26 @@ jobs:
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
 
-  apply:
-    runs-on: ubuntu-latest
-    environment:
-      name: preview
-      url: ${{ steps.deploy.outputs.url }}
-    env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      TF_VAR_linked_project: ${{ secrets.SUPABASE_PROJECT_ID }}
-    defaults:
-      run:
-        working-directory: supabase/remotes
+  # apply:
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: preview
+  #     url: ${{ steps.deploy.outputs.url }}
+  #   env:
+  #     SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+  #     TF_VAR_linked_project: ${{ secrets.SUPABASE_PROJECT_ID }}
+  #   defaults:
+  #     run:
+  #       working-directory: supabase/remotes
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: hashicorp/setup-terraform@v3
+  #       with:
+  #         terraform_wrapper: false
 
-      - run: terraform init
-      - run: terraform apply -auto-approve -no-color
+  #     - run: terraform init
+  #     - run: terraform apply -auto-approve -no-color
 
   deploy-vercel:
     uses: ./.github/workflows/deploy.yaml
