renovateの設定修正

--- a/renovate.json
+++ b/renovate.json
@@ -26,6 +26,10 @@
       "major": {
         "automerge": false
       }
+    },
+    {
+      "matchPackageNames": ["node"],
+      "enabled": false
     }
   ]
 }
